--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,18 @@
     --font-mono: "JetBrains Mono", monospace;
 }
 
+/* Hide scrollbars globally */
+html,
+body {
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+    scrollbar-width: none; /* Firefox */
+}
+
+html::-webkit-scrollbar,
+body::-webkit-scrollbar {
+    display: none; /* Safari and Chrome */
+}
+
 /* Hide scrollbars for horizontal scrolling containers */
 .hide-scrollbar {
     -ms-overflow-style: none; /* Internet Explorer 10+ */
